--- a/Corte 1/Examen/Examen/project-files/dynamips/2cc50cf2-1139-4c99-8aa8-f62bd22ef897/configs/i3_startup-config.cfg
+++ b/Corte 1/Examen/Examen/project-files/dynamips/2cc50cf2-1139-4c99-8aa8-f62bd22ef897/configs/i3_startup-config.cfg
@@ -1,28 +1,110 @@
 !
+
 !
-!
+version 12.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
 hostname R3
 !
-ip cef
-no ip domain-lookup
+boot-start-marker
+boot-end-marker
+!
+!
+no aaa new-model
+memory-size iomem 5
 no ip icmp rate-limit unreachable
-ip tcp synwait 5
+!
+!
+ip cef
+no ip domain lookup
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+ip tcp synwait-time 5
+!
+!
+!
+interface Ethernet0/0
+ no ip address
+ shutdown
+ half-duplex
+!
+interface Ethernet0/1
+ no ip address
+ shutdown
+ half-duplex
+!
+interface Ethernet0/2
+ no ip address
+ shutdown
+ half-duplex
+!
+interface Ethernet0/3
+ no ip address
+ shutdown
+ half-duplex
+!
+interface FastEthernet1/0
+ ip address 200.200.200.6 255.255.255.252
+ duplex auto
+ speed auto
+!
+interface FastEthernet2/0
+ ip address 200.200.200.10 255.255.255.252
+ duplex auto
+ speed auto
+!
+interface FastEthernet3/0
+ no ip address
+ shutdown
+ duplex auto
+ speed auto
+!
+!
+no ip http server
+ip forward-protocol nd
+!
+!
+!
 no cdp log mismatch duplex
+!
+!
+!
+control-plane
+!
+!
+!
+!
+!
+!
+!
+!
 !
 line con 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
 line aux 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+line vty 0 4
+ login
 !
 !
 end
