--- a/Corte 1/Examen/Examen/project-files/dynamips/2cc50cf2-1139-4c99-8aa8-f62bd22ef897/configs/i3_startup-config.cfg
+++ b/Corte 1/Examen/Examen/project-files/dynamips/2cc50cf2-1139-4c99-8aa8-f62bd22ef897/configs/i3_startup-config.cfg
@@ -1,5 +1,4 @@
 !
-!
 
 !
 version 12.4
@@ -40,8 +39,12 @@ ip tcp synwait-time 5
 !
 !
 !
+interface Loopback0
+ ip address 203.0.113.7 255.255.255.0
+!
 interface Ethernet0/0
  ip address 200.200.200.21 255.255.255.252
+ ip ospf priority 255
  half-duplex
 !
 interface Ethernet0/1
@@ -77,11 +80,12 @@ interface FastEthernet3/0
 !
 !
 router ospf 1
+ router-id 203.0.113.7
  log-adjacency-changes
- network 200.200.200.4 0.0.0.3 area 1
- network 200.200.200.8 0.0.0.3 area 2
+ network 200.200.200.4 0.0.0.3 area 0
+ network 200.200.200.8 0.0.0.3 area 0
  network 200.200.200.20 0.0.0.3 area 3
- network 203.0.113.0 0.0.0.255 area 3
+ network 203.0.113.0 0.0.0.255 area 0
 !
 no ip http server
 ip forward-protocol nd
