--- a/Corte 1/Examen/Examen/project-files/dynamips/342bf356-51de-4613-b2d4-a81528d63bca/configs/i4_startup-config.cfg
+++ b/Corte 1/Examen/Examen/project-files/dynamips/342bf356-51de-4613-b2d4-a81528d63bca/configs/i4_startup-config.cfg
@@ -1,5 +1,4 @@
 !
-!
 
 !
 version 12.4
@@ -39,6 +38,9 @@ no ip domain lookup
 ip tcp synwait-time 5
 !
 !
+!
+interface Loopback0
+ ip address 203.0.113.4 255.255.255.0
 !
 interface Ethernet0/0
  no ip address
@@ -90,12 +92,12 @@ interface FastEthernet3/0
 !
 !
 router ospf 1
+ router-id 203.0.113.4
  log-adjacency-changes
  network 200.200.200.12 0.0.0.3 area 1
  network 200.200.200.24 0.0.0.7 area 1
  network 200.200.200.32 0.0.0.7 area 1
  network 200.200.200.40 0.0.0.7 area 1
- network 200.200.200.48 0.0.0.15 area 1
  network 203.0.113.0 0.0.0.255 area 1
 !
 no ip http server
