--- a/Corte 1/Examen/Examen/project-files/dynamips/7ab2cb28-4b02-4643-ae98-cb3cf7bc2f45/configs/i5_startup-config.cfg
+++ b/Corte 1/Examen/Examen/project-files/dynamips/7ab2cb28-4b02-4643-ae98-cb3cf7bc2f45/configs/i5_startup-config.cfg
@@ -1,5 +1,4 @@
 !
-!
 
 !
 version 12.4
@@ -39,6 +38,9 @@ no ip domain lookup
 ip tcp synwait-time 5
 !
 !
+!
+interface Loopback0
+ ip address 203.0.113.5 255.255.255.0
 !
 interface Ethernet0/0
  ip address 200.200.200.18 255.255.255.252
@@ -91,6 +93,7 @@ interface FastEthernet3/0
 !
 !
 router ospf 1
+ router-id 203.0.113.5
  log-adjacency-changes
  network 200.200.200.16 0.0.0.3 area 2
  network 200.200.200.64 0.0.0.31 area 2
