--- a/Corte 1/Examen/Examen/project-files/dynamips/86045c5b-66eb-411c-bfae-571d36982878/configs/i1_startup-config.cfg
+++ b/Corte 1/Examen/Examen/project-files/dynamips/86045c5b-66eb-411c-bfae-571d36982878/configs/i1_startup-config.cfg
@@ -39,6 +39,9 @@ ip tcp synwait-time 5
 !
 !
 !
+interface Loopback0
+ ip address 203.0.113.1 255.255.255.0
+!
 interface Ethernet0/0
  ip address 200.200.200.13 255.255.255.252
  half-duplex
@@ -76,14 +79,16 @@ interface FastEthernet3/0
 !
 !
 router ospf 1
+ router-id 203.0.113.1
  log-adjacency-changes
- network 200.200.200.0 0.0.0.3 area 2
- network 200.200.200.4 0.0.0.3 area 3
+ network 200.200.200.0 0.0.0.3 area 0
+ network 200.200.200.4 0.0.0.3 area 0
  network 200.200.200.12 0.0.0.3 area 1
- network 203.0.113.0 0.0.0.255 area 1
+ network 203.0.113.0 0.0.0.255 area 0
 !
 no ip http server
 ip forward-protocol nd
+ip route 200.200.200.48 255.255.255.240 200.200.200.14
 !
 !
 !
