--- a/Corte 1/Examen/Examen/project-files/dynamips/a31b1585-dbf7-4065-b29a-4d968780b4c4/configs/i2_startup-config.cfg
+++ b/Corte 1/Examen/Examen/project-files/dynamips/a31b1585-dbf7-4065-b29a-4d968780b4c4/configs/i2_startup-config.cfg
@@ -1,5 +1,4 @@
 !
-!
 
 !
 version 12.4
@@ -40,6 +39,9 @@ ip tcp synwait-time 5
 !
 !
 !
+interface Loopback0
+ ip address 203.0.113.2 255.255.255.0
+!
 interface Ethernet0/0
  ip address 200.200.200.17 255.255.255.252
  half-duplex
@@ -77,11 +79,13 @@ interface FastEthernet3/0
 !
 !
 router ospf 1
+ router-id 203.0.113.2
  log-adjacency-changes
- network 200.200.200.0 0.0.0.3 area 1
- network 200.200.200.8 0.0.0.3 area 3
+ network 200.200.200.0 0.0.0.3 area 0
+ network 200.200.200.8 0.0.0.3 area 0
  network 200.200.200.16 0.0.0.3 area 2
- network 203.0.113.0 0.0.0.255 area 2
+ network 203.0.113.0 0.0.0.255 area 0
+ default-information originate always
 !
 no ip http server
 ip forward-protocol nd
