--- a/Corte 1/Examen/Examen/project-files/dynamips/bdc8180e-dfc3-4c5d-a0f3-50aadd61c278/configs/i6_startup-config.cfg
+++ b/Corte 1/Examen/Examen/project-files/dynamips/bdc8180e-dfc3-4c5d-a0f3-50aadd61c278/configs/i6_startup-config.cfg
@@ -1,5 +1,4 @@
 !
-!
 
 !
 version 12.4
@@ -40,8 +39,12 @@ ip tcp synwait-time 5
 !
 !
 !
+interface Loopback0
+ ip address 203.0.113.6 255.255.255.0
+!
 interface Ethernet0/0
  ip address 200.200.200.22 255.255.255.252
+ ip ospf priority 0
  half-duplex
 !
 interface Ethernet0/1
@@ -90,6 +93,7 @@ interface FastEthernet3/0
 !
 !
 router ospf 1
+ router-id 203.0.113.6
  log-adjacency-changes
  network 200.200.200.20 0.0.0.3 area 3
  network 200.200.200.128 0.0.0.31 area 3
