--- a/Corte 1/Examen/Examen/project-files/dynamips/2cc50cf2-1139-4c99-8aa8-f62bd22ef897/configs/i3_startup-config.cfg
+++ b/Corte 1/Examen/Examen/project-files/dynamips/2cc50cf2-1139-4c99-8aa8-f62bd22ef897/configs/i3_startup-config.cfg
@@ -1,7 +1,4 @@
 !
-!
-!
-!
 
 !
 version 12.4
@@ -67,11 +64,13 @@ interface Ethernet0/3
 !
 interface FastEthernet1/0
  ip address 200.200.200.6 255.255.255.252
+ ip ospf priority 255
  duplex auto
  speed auto
 !
 interface FastEthernet2/0
  ip address 200.200.200.10 255.255.255.252
+ ip ospf priority 255
  duplex auto
  speed auto
 !
