--- a/Corte 1/Examen/Examen/project-files/dynamips/342bf356-51de-4613-b2d4-a81528d63bca/configs/i4_startup-config.cfg
+++ b/Corte 1/Examen/Examen/project-files/dynamips/342bf356-51de-4613-b2d4-a81528d63bca/configs/i4_startup-config.cfg
@@ -1,7 +1,5 @@
 !
 !
-!
-!
 
 !
 version 12.4
@@ -46,8 +44,7 @@ interface Loopback0
  ip address 203.0.113.4 255.255.255.0
 !
 interface Ethernet0/0
- no ip address
- shutdown
+ ip address 200.200.200.14 255.255.255.252
  half-duplex
 !
 interface Ethernet0/1
@@ -105,6 +102,7 @@ router ospf 1
 !
 no ip http server
 ip forward-protocol nd
+ip route 0.0.0.0 0.0.0.0 200.200.200.13
 !
 !
 !
