--- a/Corte 1/Examen/Examen/project-files/dynamips/86045c5b-66eb-411c-bfae-571d36982878/configs/i1_startup-config.cfg
+++ b/Corte 1/Examen/Examen/project-files/dynamips/86045c5b-66eb-411c-bfae-571d36982878/configs/i1_startup-config.cfg
@@ -1,7 +1,4 @@
 !
-!
-!
-!
 
 !
 version 12.4
@@ -84,6 +81,7 @@ interface FastEthernet3/0
 router ospf 1
  router-id 203.0.113.1
  log-adjacency-changes
+ redistribute static subnets
  network 200.200.200.0 0.0.0.3 area 0
  network 200.200.200.4 0.0.0.3 area 0
  network 200.200.200.12 0.0.0.3 area 1
@@ -91,6 +89,7 @@ router ospf 1
 !
 no ip http server
 ip forward-protocol nd
+ip route 200.200.200.12 255.255.255.252 200.200.200.62
 ip route 200.200.200.48 255.255.255.240 200.200.200.14
 !
 !
