--- a/Corte 2/Practica 2/Practica 2/Practica 2/project-files/dynamips/7c494f6a-478c-43b4-8778-90eae9a831c0/configs/i2_startup-config.cfg
+++ b/Corte 2/Practica 2/Practica 2/Practica 2/project-files/dynamips/7c494f6a-478c-43b4-8778-90eae9a831c0/configs/i2_startup-config.cfg
@@ -1,30 +1,158 @@
 !
+
 !
-!
-!
-!
+! Last configuration change at 09:16:41 UTC Fri Oct 11 2019
+upgrade fpd auto
+version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
 hostname R1
 !
-ip cef
-no ip domain-lookup
+boot-start-marker
+boot-end-marker
+!
+!
+!
+no aaa new-model
 no ip icmp rate-limit unreachable
-ip tcp synwait 5
+!
+!
+!
+ip dhcp excluded-address 192.168.0.1 192.168.0.2
+!
+ip dhcp pool DHCP-Pool1
+ network 192.168.0.0 255.255.255.0
+ default-router 192.168.0.1 
+!
+!
+!
+no ip domain lookup
+ip cef
+no ipv6 cef
+!
+multilink bundle-name authenticated
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+redundancy
+!
+!
+ip tcp synwait-time 5
+! 
+!
+!
+!
+!
+!
+!
+!
+!
+!
+interface Ethernet0/0
+ no ip address
+ shutdown
+ duplex auto
+!
+interface GigabitEthernet0/0
+ no ip address
+ shutdown
+ duplex full
+ speed 1000
+ media-type gbic
+ negotiation auto
+!
+interface FastEthernet1/0
+ no ip address
+ shutdown
+ duplex auto
+ speed auto
+!
+interface FastEthernet1/1
+ no ip address
+ shutdown
+ duplex auto
+ speed auto
+!
+interface FastEthernet2/0
+ no ip address
+ shutdown
+ duplex auto
+ speed auto
+!
+interface FastEthernet2/1
+ no ip address
+ shutdown
+ duplex auto
+ speed auto
+!
+interface FastEthernet3/0
+ no ip address
+ shutdown
+ duplex auto
+ speed auto
+!
+interface FastEthernet3/1
+ no ip address
+ shutdown
+ duplex auto
+ speed auto
+!
+interface FastEthernet4/0
+ no ip address
+ shutdown
+ duplex auto
+ speed auto
+!
+interface FastEthernet4/1
+ no ip address
+ shutdown
+ duplex auto
+ speed auto
+!
+ip forward-protocol nd
+no ip http server
+no ip http secure-server
+!
+!
+!
 no cdp log mismatch duplex
+!
+!
+!
+control-plane
+!
+!
+!
+mgcp profile default
+!
+!
+!
+gatekeeper
+ shutdown
+!
 !
 line con 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+ stopbits 1
 line aux 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+ stopbits 1
+line vty 0 4
+ login
+ transport input all
 !
 !
 end
