--- a/Corte 2/Practica 2/Practica 2/Practica 2/project-files/dynamips/e55c3169-aed9-4364-b135-9e8324132f48/configs/i1_startup-config.cfg
+++ b/Corte 2/Practica 2/Practica 2/Practica 2/project-files/dynamips/e55c3169-aed9-4364-b135-9e8324132f48/configs/i1_startup-config.cfg
@@ -1,6 +1,4 @@
 !
-!
-!
 
 !
 version 12.4
@@ -80,9 +78,16 @@ ip forward-protocol nd
 !
 !
 ip nat pool NAT-POOL1 192.168.0.2 192.168.0.20 netmask 255.255.255.0
+ip nat pool MY-NAT-POOL 192.168.0.2 192.168.0.20 netmask 255.255.255.0
 ip nat inside source list 1 pool NAT-POOL1
+ip nat inside source list NAT pool MY-NAT-POOL
 !
+!
+ip access-list extended NAT
+ permit ip 192.168.10.0 0.0.0.255 any
+ permit ip 192.168.20.0 0.0.0.255 any
 access-list 1 permit 192.168.10.0 0.0.0.255
+access-list 1 permit 192.168.20.0 0.0.0.255
 no cdp log mismatch duplex
 !
 !
